syntax = "proto3";

import "elimity/insights/common/v1alpha1/common.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

message Level {
  oneof value {
    google.protobuf.Empty alert = 1;
    google.protobuf.Empty info = 2;
  }
}

message Log {
  Level level = 1;
  string message = 2;
}

message PerformImportRequest {
  map<string, google.protobuf.Value> fields = 1;
}

message PerformImportResponse {
  oneof value {
    common.v1alpha1.Entity entity = 1;
    Log log = 2;
    common.v1alpha1.Relationship relationship = 3;
  }
}

option go_package = "github.com/elimity-com/insights-sdk/gen/elimity/insights/customgateway/v1alpha1";

package elimity.insights.customgateway.v1alpha1;

service Service {
  rpc PerformImport(PerformImportRequest) returns (stream PerformImportResponse);
}
